--- a/EX-02-SELETORES-CSS/index.html
+++ b/EX-02-SELETORES-CSS/index.html
@@ -1,11 +1,91 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seletores no CSS</title>
-</head>
-<body>
-    <h1>Aprendendo Sobre os Seletores no CSS!</h1>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1 id="principal">Aprendendo Sobre os Seletores no CSS!</h1>
+    <h2 class="basico">HTML BÁSICO</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, aperiam
+      sunt perspiciatis aliquam quidem officia vel delectus recusandae unde
+      excepturi temporibus, iure, iusto qui praesentium incidunt illo quibusdam
+      facere modi Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
+      eum optio! Facere, consequuntur officia, aperiam quidem mollitia autem
+      magnam harum hic, laboriosam deleniti corporis repudiandae. Autem fugiat
+      quibusdam accusantium magnam. Lorem ipsum dolor sit amet consectetur
+      adipisicing elit. Minima aut beatae saepe eius deleniti, obcaecati eum
+      velit magnam expedita dicta blanditiis! A quo est obcaecati, magnam
+      delectus sunt optio magni.
+    </p>
+    <h2 class="intermediario">HTML INTERMÉDIARIO</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
+      reiciendis ad maiores voluptatem minima consequuntur, consequatur quod
+      corrupti aperiam fugiat repellendus. Magni ad rem laudantium reiciendis.
+      Atque fugit minima velit Lorem ipsum dolor sit amet, consectetur
+      adipisicing elit. Eos, eum optio! Facere, consequuntur officia, aperiam
+      quidem mollitia autem magnam harum hic, laboriosam deleniti corporis
+      repudiandae. Autem fugiat quibusdam accusantium magnam. Lorem ipsum dolor
+      sit amet consectetur adipisicing elit. Minima aut beatae saepe eius
+      deleniti, obcaecati eum velit magnam expedita dicta blanditiis! A quo est
+      obcaecati, magnam delectus sunt optio magni.
+    </p>
+    <h2 class="avancado">HTML AVANÇADO</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
+      reiciendis ad maiores voluptatem minima consequuntur, consequatur quod
+      corrupti aperiam fugiat repellendus. Magni ad rem laudantium reiciendis.
+      Atque fugit minima velit Lorem ipsum dolor sit amet, consectetur
+      adipisicing elit. Eos, eum optio! Facere, consequuntur officia, aperiam
+      quidem mollitia autem magnam harum hic, laboriosam deleniti corporis
+      repudiandae. Autem fugiat quibusdam accusantium magnam. Lorem ipsum dolor
+      sit amet consectetur adipisicing elit. Minima aut beatae saepe eius
+      deleniti, obcaecati eum velit magnam expedita dicta blanditiis! A quo est
+      obcaecati, magnam delectus sunt optio magni.
+    </p>
+    <h1>APRENDENDO SELETORES CSS</h1>
+    <h2 class="basico">CSS BÁSICO</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab cumque optio
+      quis soluta debitis architecto officia delectus harum quidem magni,
+      voluptates facilis hic eligendi ducimus nam minima tempore eos nulla Lorem
+      ipsum dolor sit amet, consectetur adipisicing elit. Eos, eum optio!
+      Facere, consequuntur officia, aperiam quidem mollitia autem magnam harum
+      hic, laboriosam deleniti corporis repudiandae. Autem fugiat quibusdam
+      accusantium magnam. Lorem ipsum dolor sit amet consectetur adipisicing
+      elit. Minima aut beatae saepe eius deleniti, obcaecati eum velit magnam
+      expedita dicta blanditiis! A quo est obcaecati, magnam delectus sunt optio
+      magni.
+    </p>
+    <h2 class="intermediario">CSS INTERMÉDIARIO</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
+      reiciendis ad maiores voluptatem minima consequuntur, consequatur quod
+      corrupti aperiam fugiat repellendus. Magni ad rem laudantium reiciendis.
+      Atque fugit minima velit Lorem ipsum dolor sit amet, consectetur
+      adipisicing elit. Eos, eum optio! Facere, consequuntur officia, aperiam
+      quidem mollitia autem magnam harum hic, laboriosam deleniti corporis
+      repudiandae. Autem fugiat quibusdam accusantium magnam. Lorem ipsum dolor
+      sit amet consectetur adipisicing elit. Minima aut beatae saepe eius
+      deleniti, obcaecati eum velit magnam expedita dicta blanditiis! A quo est
+      obcaecati, magnam delectus sunt optio magni.
+    </p>
+    <h2 class="avancado">CSS AVANÇADO</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
+      reiciendis ad maiores voluptatem minima consequuntur, consequatur quod
+      corrupti aperiam fugiat repellendus. Magni ad rem laudantium reiciendis.
+      Atque fugit minima velit Lorem ipsum dolor sit amet, consectetur
+      adipisicing elit. Eos, eum optio! Facere, consequuntur officia, aperiam
+      quidem mollitia autem magnam harum hic, laboriosam deleniti corporis
+      repudiandae. Autem fugiat quibusdam accusantium magnam. Lorem ipsum dolor
+      sit amet consectetur adipisicing elit. Minima aut beatae saepe eius
+      deleniti, obcaecati eum velit magnam expedita dicta blanditiis! A quo est
+      obcaecati, magnam delectus sunt optio magni.
+    </p>
+  </body>
 </html>
