--- a/PSEUDO-CLASSES/index.html
+++ b/PSEUDO-CLASSES/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div>
+      01
+      <p>TEXTO ESCONDIDO</p>
+    </div>
+    <div>
+      02
+      <p>TEXTO ESCONDIDO</p>
+    </div>
+    <div>
+      03
+      <p>TEXTO ESCONDIDO</p>
+    </div>
+
+    <p>Fim dos Exemplos.</p>
+  </body>
 </html>
