--- a/PSEUDO-CLASSES/index.html
+++ b/PSEUDO-CLASSES/index.html
@@ -21,5 +21,29 @@
     </div>
 
     <p>Fim dos Exemplos.</p>
+
+    <ul>
+      <li>
+        <a href="https://youtube.com" target="_blank"
+          ><ion-icon name="logo-youtube"></ion-icon
+        ></a>
+      </li>
+      <li>
+        <a href="#" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+      </li>
+      <li>
+        <a href="#" target="_blank"
+          ><ion-icon name="logo-instagram"></ion-icon
+        ></a>
+      </li>
+    </ul>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
