aprendendo sobre caixas

--- a/APRENDENDO-SOBRE-CAIXAS/index.html
+++ b/APRENDENDO-SOBRE-CAIXAS/index.html
@@ -7,7 +7,7 @@
     <title>Aprendendo Sobre Caixas no Html</title>
   </head>
   <body>
-    <div id="box"></div>
+    <div id="box"><span>Olá mundo</span></div>
     <div id="box2"></div>
   </body>
 </html>
